# ROS2-LiDAR-SLAM-and-Navigation

./: .gitignore  README.md
outputs/: README.txt
scripts/: env_ros_local.sh  kill_ros_stack.sh  render_resume_metrics.py  run_nav_benchmark.sh  run_trajectory_matrix.sh  source_ws.sh  verify_phase5_navigation.sh
src/icp_odometry/: CMakeLists.txt  package.xml
src/icp_odometry/config/: icp_odometry.yaml
src/icp_odometry/include/icp_odometry/: icp_2d.hpp
src/icp_odometry/launch/: icp_odometry.launch.py
src/icp_odometry/src/: icp_2d.cpp  icp_odometry_node.cpp
src/icp_odometry/test/: test_icp_2d.cpp
src/navigation_evaluation/: CMakeLists.txt  package.xml
src/navigation_evaluation/config/: navigation_evaluation.yaml
src/navigation_evaluation/launch/: evaluation.launch.py
src/navigation_evaluation/scripts/: nav_benchmark.py  navigation_metrics.py  plot_trajectory_metrics.py  trajectory_evaluator.py
src/noise_injection/: package.xml  setup.cfg  setup.py
src/noise_injection/config/: noise_injection.yaml
src/noise_injection/launch/: noise_injection.launch.py
src/noise_injection/noise_injection/: noise.py  noise_injection_node.py
src/noise_injection/test/: test_laserscan_noise.py
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/config/: ekf_wheel.yaml  ekf_wheel_imu.yaml  ekf_wheel_imu_icp.yaml  robot_bringup.yaml
src/robot_bringup/description/: simple_lidar_bot.urdf.xacro
src/robot_bringup/launch/: bringup.launch.py  ekf.launch.py  simulation.launch.py
src/robot_bringup/scripts/: mapping_explore.py  nav_three_goals.py  scan_relay.py  send_test_velocity.py  validate_simulation.py
src/robot_bringup/worlds/: indoor_test.world
src/slam_navigation/: CMakeLists.txt  package.xml
src/slam_navigation/config/: nav2_params.yaml  slam_navigation.yaml  slam_toolbox.yaml
src/slam_navigation/launch/: mapping.launch.py  navigation.launch.py  slam_navigation.launch.py
src/slam_navigation/maps/: indoor_test.pgm  indoor_test.yaml
